<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Celebrations</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_reminder">Add New Reminder</string>
    <string name="details_activity">Details</string>
    <string name="reminder_desc">Reminder Description</string>
    <string name="reminder_type">Type</string>
    <string name="reminder_date">Enter Date (yyyy-MM-dd)</string>
    <string name="reminder_add_button">Add</string>
    <string name="delete">Delete</string>
    <string name="alarm">Set alarm</string>
    <string name="reminder_prompt">Choose the reminder type</string>
    <string name="groupName">Enter Group Name</string>
    <string name="title_activity_add_preference">Toggle</string>

    <string-array name="type_arrays">
        <item >Anniversary</item>
        <item >Birthday</item>
    </string-array>
   <string name="details_heading">Details</string>

</resources>
