<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddReminderActivity" >
    
	<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:text="@string/title_activity_add_reminder"
    android:layout_gravity="center" 
    android:layout_above="@+id/desc"
	/>
    
   <EditText
        android:id="@id/desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_desc" />
    <EditText
        android:id="@+id/type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc"
        android:hint="@string/reminder_type"/>
    <EditText
        android:id="@+id/date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/type"
        android:hint="@string/reminder_date"
         />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:layout_alignParentRight="true"
        android:text="@string/reminder_add_button"
        android:onClick="addNewReminder" />
    

</RelativeLayout>
